5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4159/executions/1638_2728.log
== SUBMITION (2019-04-16 10:47:54) 
-- CODE:
p = float(input("km: "))
carro = input(" A ou B ").upper.()
if(carro=="A"):
	print(round(p/8, 2))
else:
	print(round(p/12, 2))
-- EXECUTION TIME:
0.123181
-- ERROR:
  File "/home/codebench/codes/1638/2728/main.py", line 2
    carro = input().upper.()
                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:48:13) 
-- CODE:
p = float(input("km: "))
carro = input(" A ou B ").upper.()
if(carro=="A"):
	print(round(p/8, 2))
else:
	print(round(p/12, 2))
-- ERROR:
File "XXXX", line 2
    carro = input().upper.()
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:48:25) 
-- CODE:
p = float(input("km: "))
carro = input(" A ou B ").upper()
if(carro=="A"):
	print(round(p/8, 2))
else:
	print(round(p/12, 2))
-- EXECUTION TIME:
0.126882
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
5.42
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
8.12
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
25.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
